# service/api/gobang/v1/gobang_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.2.0
-// - protoc             v3.17.3
+// - protoc             v3.19.4
 // source: gobang/v1/gobang.proto
 
 package v1
@@ -24,7 +24,9 @@ const _ = grpc.SupportPackageIsVersion7
 type GobangClient interface {
 	Register(ctx context.Context, in *RegisterReq, opts ...grpc.CallOption) (*RegisterReply, error)
 	Login(ctx context.Context, in *LoginReq, opts ...grpc.CallOption) (*RegisterReply, error)
+	MemberStatus(ctx context.Context, in *StatusRequest, opts ...grpc.CallOption) (*StatusReply, error)
 	RoomCreate(ctx context.Context, in *RoomRequest, opts ...grpc.CallOption) (*RoomReply, error)
+	SayHello(ctx context.Context, in *HelloRequest, opts ...grpc.CallOption) (*HelloReply, error)
 }
 
 type gobangClient struct {
@@ -53,9 +55,27 @@ func (c *gobangClient) Login(ctx context.Context, in *LoginReq, opts ...grpc.Cal
 	return out, nil
 }
 
+func (c *gobangClient) MemberStatus(ctx context.Context, in *StatusRequest, opts ...grpc.CallOption) (*StatusReply, error) {
+	out := new(StatusReply)
+	err := c.cc.Invoke(ctx, "/gobang.v1.Gobang/MemberStatus", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *gobangClient) RoomCreate(ctx context.Context, in *RoomRequest, opts ...grpc.CallOption) (*RoomReply, error) {
 	out := new(RoomReply)
 	err := c.cc.Invoke(ctx, "/gobang.v1.Gobang/RoomCreate", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *gobangClient) SayHello(ctx context.Context, in *HelloRequest, opts ...grpc.CallOption) (*HelloReply, error) {
+	out := new(HelloReply)
+	err := c.cc.Invoke(ctx, "/gobang.v1.Gobang/SayHello", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -68,7 +88,9 @@ func (c *gobangClient) RoomCreate(ctx context.Context, in *RoomRequest, opts ...
 type GobangServer interface {
 	Register(context.Context, *RegisterReq) (*RegisterReply, error)
 	Login(context.Context, *LoginReq) (*RegisterReply, error)
+	MemberStatus(context.Context, *StatusRequest) (*StatusReply, error)
 	RoomCreate(context.Context, *RoomRequest) (*RoomReply, error)
+	SayHello(context.Context, *HelloRequest) (*HelloReply, error)
 	mustEmbedUnimplementedGobangServer()
 }
 
@@ -82,8 +104,14 @@ func (UnimplementedGobangServer) Register(context.Context, *RegisterReq) (*Regis
 func (UnimplementedGobangServer) Login(context.Context, *LoginReq) (*RegisterReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Login not implemented")
 }
+func (UnimplementedGobangServer) MemberStatus(context.Context, *StatusRequest) (*StatusReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method MemberStatus not implemented")
+}
 func (UnimplementedGobangServer) RoomCreate(context.Context, *RoomRequest) (*RoomReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method RoomCreate not implemented")
+}
+func (UnimplementedGobangServer) SayHello(context.Context, *HelloRequest) (*HelloReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method SayHello not implemented")
 }
 func (UnimplementedGobangServer) mustEmbedUnimplementedGobangServer() {}
 
@@ -134,6 +162,24 @@ func _Gobang_Login_Handler(srv interface{}, ctx context.Context, dec func(interf
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Gobang_MemberStatus_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(StatusRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GobangServer).MemberStatus(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/gobang.v1.Gobang/MemberStatus",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GobangServer).MemberStatus(ctx, req.(*StatusRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _Gobang_RoomCreate_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(RoomRequest)
 	if err := dec(in); err != nil {
@@ -148,6 +194,24 @@ func _Gobang_RoomCreate_Handler(srv interface{}, ctx context.Context, dec func(i
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(GobangServer).RoomCreate(ctx, req.(*RoomRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Gobang_SayHello_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(HelloRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GobangServer).SayHello(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/gobang.v1.Gobang/SayHello",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GobangServer).SayHello(ctx, req.(*HelloRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -168,8 +232,16 @@ var Gobang_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _Gobang_Login_Handler,
 		},
 		{
+			MethodName: "MemberStatus",
+			Handler:    _Gobang_MemberStatus_Handler,
+		},
+		{
 			MethodName: "RoomCreate",
 			Handler:    _Gobang_RoomCreate_Handler,
+		},
+		{
+			MethodName: "SayHello",
+			Handler:    _Gobang_SayHello_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
